CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(neo)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS -D__DOOM__)

IF(MSVC)
    # Release configs build with the static c runtime
    STRING(REPLACE "/MD" "/MT" CMAKE_C_FLAGS_RELEASE ${CMAKE_C_FLAGS_RELEASE})
    STRING(REPLACE "/MD" "/MT" CMAKE_C_FLAGS_RELWITHDEBINFO ${CMAKE_C_FLAGS_RELWITHDEBINFO})
    STRING(REPLACE "/MD" "/MT" CMAKE_C_FLAGS_MINSIZEREL ${CMAKE_C_FLAGS_MINSIZEREL})
    STRING(REPLACE "/MD" "/MT" CMAKE_CXX_FLAGS_RELEASE ${CMAKE_CXX_FLAGS_RELEASE})
    STRING(REPLACE "/MD" "/MT" CMAKE_CXX_FLAGS_RELWITHDEBINFO ${CMAKE_CXX_FLAGS_RELWITHDEBINFO})
    STRING(REPLACE "/MD" "/MT" CMAKE_CXX_FLAGS_MINSIZEREL ${CMAKE_CXX_FLAGS_MINSIZEREL})
ENDIF(MSVC)

ADD_SUBDIRECTORY(neo/curl)
ADD_SUBDIRECTORY(neo/idlib)
ADD_SUBDIRECTORY(neo/game)
#ADD_SUBDIRECTORY(neo/d3xp)
ADD_SUBDIRECTORY(neo)
