# gamex86 shared library
ADD_DEFINITIONS(-DGAME_DLL -D_D3XP -DCTF)

FILE(GLOB_RECURSE ID_SRCS *.cpp)
FILE(GLOB_RECURSE ID_INCS *.h)

LIST(REMOVE_ITEM ID_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/gamesys/Callbacks.cpp)
LIST(REMOVE_ITEM ID_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/gamesys/TypeInfo.cpp)
LIST(REMOVE_ITEM ID_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/EndLevel.cpp)

ADD_LIBRARY(gamex86 SHARED ${ID_SRCS} ${ID_INCS} gamesys/TypeInfo.cpp Game.def)
ADD_DEPENDENCIES(gamex86 idlib)
TARGET_LINK_LIBRARIES(gamex86 idlib)
INCLUDE(../../PCH.cmake)
