# idlib static library
ADD_DEFINITIONS(-D__IDLIB__ -DCB_VISTA_7_8=1)

FILE(GLOB_RECURSE ID_SRCS *.cpp)
FILE(GLOB_RECURSE ID_INCS *.h)

IF(MSVC)
    LIST(REMOVE_ITEM ID_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/bv/Frustum_gcc.cpp)
    LIST(REMOVE_ITEM ID_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/math/Simd_AltiVec.cpp)
ENDIF(MSVC)

ADD_LIBRARY(idlib ${ID_SRCS} ${ID_INCS})
INCLUDE(../../PCH.cmake)
